redis实现分布式锁

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>spring-cache-demo</module>
         <module>spring-security-demo</module>
+		<module>seckill-demo</module>
     </modules>
 
     <dependencies>
