--- a/seckill-demo/src/main/resources/application.yml
+++ b/seckill-demo/src/main/resources/application.yml
@@ -6,15 +6,15 @@ spring:
     name: seckill
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.204.128:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: zhengjiaxing
+    password: zjx123
   redis:
    # database: 0
-    host: 127.0.0.1
+    host: 192.168.204.128
     port: 6379
-    password:      # 密码（默认为空）
+    password: zjx123    # 密码（默认为空）
     timeout: 6000  # 连接超时时长（毫秒）
     #clusters: 10.10.1.1:7000,10.10.1.1:7001,10.10.1.1:7002,10.10.1.1:7003,10.10.1.1:7004,10.10.1.1:7005
 
