--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -17,7 +17,7 @@
         <groupId>spring.boot.zjx</groupId>
         <artifactId>spring-boot-zjx</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <dependencies>
