--- a/spring-cache-demo/src/main/resources/application.yml
+++ b/spring-cache-demo/src/main/resources/application.yml
@@ -6,15 +6,29 @@ spring:
     name: spring-cache
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.160.128:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: zhengjiaxing
+    password: zjx123
   jpa:
     show-sql: true
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 192.168.160.128
     port: 6379
-    password:      # 密码（默认为空）
+    password: zjx123     # 密码（默认为空）
     timeout: 6000  # 连接超时时长（毫秒）
+
+  cache:
+    type: redis
+
+logging:
+  level:
+    org.springframework.security:
+      - debug
+      - info
+    org.springframework.web: error
+    org.hibernate.SQL: debug
+    org.hibernate.engine.QueryParameters: debug
+    org.hibernate.engine.query.HQLQueryPlan: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
