--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -26,6 +26,8 @@
         <module>spring-security-demo</module>
 		<module>seckill-demo</module>
         <module>rabbitmq-demo</module>
+        <module>rabbitmq-consumer-demo</module>
+        <module>rabbitmq-producer-demo</module>
     </modules>
 
     <dependencies>
