--- a/rabbitmq-producer-demo/src/main/resources/application.yml
+++ b/rabbitmq-producer-demo/src/main/resources/application.yml
@@ -17,14 +17,14 @@ spring:
     # Virtual Name一般以/开头
     virtual-host: /
     # 确认消息是否正确到达queue,如果没有则触发，如果有则不触发
-    publisher-returns: on
+    publisher-returns: true
     # 确认消息是否到达broker服务器，也就是只确认是否正确到达exchange中即可，
     # 只要正确的到达exchange中，broker即可确认该消息返回给客户端ack
     # 如果是simple就不会回调
     publisher-confirm-type: correlated
     template:
       #设置为 on 后 消费者在消息没有被路由到合适队列情况下会被return监听，而不会自动删除
-      mandatory: on
+      mandatory: true
 #      retry:
 #        enabled: on   # 发送重试是否可用
 #        multiplier: 1 # 应用于上一重试间隔的乘数
