--- a/spring-cache-demo/src/main/resources/application.yml
+++ b/spring-cache-demo/src/main/resources/application.yml
@@ -13,11 +13,31 @@ spring:
   jpa:
     show-sql: true
   redis:
-    database: 0
-    host: 192.168.160.128
-    port: 6379
-    password: zjx123     # 密码（默认为空）
+    # 单机
+    #host: 192.168.160.128
+    #port: 6379
+    # 集群
+    cluster:
+      nodes:
+        - 192.168.160.128:6379
+        - 192.168.160.128:6380
+        - 192.168.160.128:6381
+    # 哨兵
+    sentinel:
+      master: mymaster
+      nodes:
+        - 192.168.160.128:26379
+        - 192.168.160.128:26380
+        - 192.168.160.128:26381
+    password: zjx123  # 密码（默认为空）
     timeout: 6000  # 连接超时时长（毫秒）
+    database: 0 # Redis数据库索引(默认为0)
+    jedis:
+      pool:
+        max-active: 9  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 9 # 连接池中的最大空闲连接
+        min-idle: 0 # 连接池中的最小空闲连接
 
   cache:
     type: redis
