kafka demo, 整合logback,elk输出日志

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>rabbitmq-demo</module>
         <module>rabbitmq-consumer-demo</module>
         <module>rabbitmq-producer-demo</module>
+        <module>kafka-demo</module>
     </modules>
 
     <dependencies>
